# constrata

./: .gitignore  LICENSE  README.md  pyproject.toml
constrata/: __init__.py  binary_struct.py  byte_order.py  exceptions.py  fields.py  metadata.py  utilities.py
constrata/field_types/: __init__.py  primitive_types.py  type_info.py
constrata/streams/: __init__.py  base.py  bits.py  reader.py  writer.py
