[tool.poetry]
name = "constrata"
version = "1.0.1"
description = "Binary struct reading/writing Python library based on dataclass schemas"
authors = ["Scott Mooney <grimrukh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Grimrukh/constrata"
repository = "https://github.com/Grimrukh/constrata"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "constrata" },
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"